--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start": "node backend/api_server.js",
     "dev": "nodemon backend/api_server.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint backend/"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -21,6 +22,9 @@
     "mongodb": "^6.8.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.6.0",
+    "eslint": "9.x",
+    "globals": "^15.8.0",
     "jest": "^29.7.0",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.4",
