--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node backend/api_server.js",
     "dev": "nodemon backend/api_server.js",
     "test": "jest",
-    "lint": "eslint backend/"
+    "lint": "semistandard && eslint backend/"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -28,6 +28,15 @@
     "jest": "^29.7.0",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.4",
+    "semistandard": "^17.0.0",
     "supertest": "^7.0.0"
+  },
+  "semistandard": {
+    "ignore": [
+      "jest.config.js",
+      "*.test.js",
+      "*.spec.js",
+      "eslint.config.mjs"
+    ]
   }
 }
