Update folder structure to isolate backend from project root

--- a/.github/workflows/lint-test.yml
+++ b/.github/workflows/lint-test.yml
@@ -1,9 +1,12 @@
-name: lint-test
-run-name: eslint and jest tests
+name: backend-lint-test
+run-name: semistandard, eslint and jest tests
 on: [push, pull_request]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./backend
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
