--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,7 @@
     "dev": "nodemon api_server.js",
     "test": "jest",
     "test:watch": "jest --watch",
-    "lint": "semistandard && eslint --fix"
+    "lint": "eslint --fix"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -29,15 +29,6 @@
     "jest": "^29.7.0",
     "node-notifier": "^10.0.1",
     "nodemon": "^3.1.4",
-    "semistandard": "^17.0.0",
     "supertest": "^7.0.0"
-  },
-  "semistandard": {
-    "ignore": [
-      "jest.config.js",
-      "*.test.js",
-      "*.spec.js",
-      "eslint.config.mjs"
-    ]
   }
 }
