--- a/.github/workflows/lint-test2.yml
+++ b/.github/workflows/lint-test2.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./frontend
+        working-directory: ./react-app
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
